Fixed dark mode & more

--- a/themes/data-science/static/css/style.css
+++ b/themes/data-science/static/css/style.css
@@ -29,7 +29,7 @@ pre {
  }
 
 .dark img{
- mix-blend-mode: hard-light;
+ mix-blend-mode: normal;
 }
 
 .dark .intro-container img{
